    of the returned class, similar to Class.new and Struct.new.

ERB::

  * Prohibit marshaling ERB instance.

IRB::

  * Introduce syntax highlight inspired by pry.gem to Binding#irb source lines,
    REPL input, and inspect output of some core-class objects.

  * Introduce multiline mode by Reline.

  * Show documents when completion.

  * Enable auto indent and save/load history by default.

Net::IMAP::

  * Add Server Name Indication (SNI) support.  [Feature #15594]

open-uri::

  * Warn open-uri's "open" method at Kernel.
    Use URI.open instead.  [Misc #15893]

  * The default charset of text/* media type is UTF-8 instead of
    ISO-8859-1.  [Bug #15933]

Pathname::

  * Delegates 3 arguments from Pathname.glob to Dir.glob to
    accept base: keyword.

Racc::

  * Merge 1.4.15 from upstream repository and added cli of racc.

Reline::

  * New stdlib that is compatible with readline stdlib by pure Ruby and also
    has a multiline mode.

RSS::

  * Upgrade to RSS 0.2.8.
    See https://github.com/ruby/rss/blob/master/NEWS.md.

RubyGems::

  * Upgrade to RubyGems 3.1.0.pre1
    Bundled from https://github.com/rubygems/rubygems/commit/97b264f0fa248c864b6ee9a23d3ff1cdd217dddb

=== Compatibility issues (excluding feature bug fixes)

=== Stdlib compatibility issues (excluding feature bug fixes)

profile.rb, Profiler__::

  * Removed from standard library. No one maintains it from Ruby 2.0.0.

=== C API updates

  * C API declarations with `ANYARGS` are changed not to use `ANYARGS`
    https://github.com/ruby/ruby/pull/2404

=== Implementation improvements

Fiber::

  * Allow selecting different coroutine implementation by using
    `--with-coroutine=`, e.g.

         ./confgure --with-coroutine=ucontext
         ./confgure --with-coroutine=copy

  * Replace previous stack cache with fiber pool cache. The fiber pool
    allocates many stacks in a single memory region. Stack allocation
    becomes O(log N) and fiber creation is amortized O(1). Around 10x